# cocoindex-code

./: pyproject.toml
src/cocoindex_code/: indexer.py
